reduce vignette size - remove precompile_vignettes.R in favor of pkgdev::precompute_vignette_all()

--- a/vignettes/GXwasR_overview.Rmd
+++ b/vignettes/GXwasR_overview.Rmd
@@ -8,7 +8,7 @@ author:
     email: banabithi.bose@gmail.com
 output: 
   BiocStyle::html_document:
-    self_contained: true
+    self_contained: false
     toc: true
     toc_float: true
     toc_depth: 2
