--- a/vignettes/preimputationQC.Rmd
+++ b/vignettes/preimputationQC.Rmd
@@ -8,12 +8,12 @@ author:
     email: banabithi.bose@gmail.com
 output: 
   BiocStyle::html_document:
-    self_contained: true
+    self_contained: false
     toc: true
     toc_float: true
     toc_depth: 2
     code_folding: show
-date: "1 August 2025"
+date: "4 August 2025"
 package: "GXwasR 0.99.0"
 vignette: >
   %\VignetteIndexEntry{preimputationQC}
@@ -69,8 +69,12 @@ These plink files contain genotypes for 276 individuals (males and females) simu
 ## Call some libraries
 library(GXwasR)
 library(printr)
+#> Registered S3 method overwritten by 'printr':
+#>   method                from     
+#>   knit_print.data.frame rmarkdown
 library(rmarkdown)
 ```
+
 ## Learn about all the GXwasR functions
 
 **Before beginning the pre-imputation quality control (QC), it is recommended that users familiarize themselves with all the functions in the GXwasR package. This knowledge will help them understand the required input arguments, how to execute the functions, and what outputs to expect.**
@@ -79,7 +83,6 @@ To explore all available functions, users should first load the GXwasR library a
 
 
 ``` r
-library(GXwasR)
 browseVignettes("GXwasR")
 ```
 
@@ -89,7 +92,7 @@ browseVignettes("GXwasR")
 
 
 ``` r
-DataDir <- system.file("extdata", package = "GXwasR")
+DataDir <- GXwasR:::GXwasR_data()
 ResultDir <- tempdir()
 finput <- "GXwasR_example"
 x <- PlinkSummary(DataDir, ResultDir, finput)
@@ -130,6 +133,7 @@ foutput <- "PreimputeEX_QC1"
 x <- FilterAllele(DataDir, ResultDir, finput, foutput)
 #> ℹ There is no multi-allelic SNP present in the input dataset.
 ```
+
 Since there was no multi-allelic SNPs, we will proceed with the same input data.
 
 ## Step 2: QC of SNPs for genotype call rate
@@ -212,7 +216,7 @@ ambi_out <- TRUE
 x = QCsample(DataDir = DataDir,ResultDir = ResultDir, finput = finput,foutput = foutput, imiss = imiss,het = het, IBD = NULL, filterSample = filterSample, ambi_out = ambi_out)
 #> ℹ Missingness and heterogygosity thresholds are NULL.
 #> ℹ There will be no sample to be filtered for IBD with 'IBD' threshold.
-#> Warning: cannot open file '/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpJ9ecms/PreimputeEX_QC2.fam': No such file or directory
+#> Warning: cannot open file '/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpaS06fx/PreimputeEX_QC2.fam': No such file or directory
 ```
 
 ## Step 4: Apply sex check
@@ -339,7 +343,7 @@ x <- QCsnp(DataDir = DataDir, ResultDir = ResultDir, finput = finput,foutput = f
 #> • In cases,  1 variant removed due to Hardy-Weinberg exact test.
 #> • In controls,  19 variants removed due to Hardy-Weinberg exact test.
 #> ✔ Merging is done using the common SNPs between the input genotype files.
-#> ✔ Plink files with merged regions are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpJ9ecms prefixed as filtered_temp2
+#> ✔ Plink files with merged regions are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpaS06fx prefixed as filtered_temp2
 #> ℹ There are no monomorphic SNPs.
 #> ℹ No SNP with differential missingness between cases and controls.
 #> ✔ Output plink files prefixed as ,PreimputeEX_QC3, with passed SNPs are saved in ResultDir.
@@ -399,7 +403,7 @@ x = QCsample(DataDir = DataDir,ResultDir = ResultDir, finput = finput,foutput = 
 #> • Plots are initiated.
 ```
 
-![plot of chunk unnamed-chunk-14](figure/unnamed-chunk-14-1.png)
+![plot of chunk unnamed-chunk-14](./unnamed-chunk-14-1.png)
 
 ```
 #> ℹ No. of samples filtered/flagged for missingness: 0
@@ -408,7 +412,7 @@ x = QCsample(DataDir = DataDir,ResultDir = ResultDir, finput = finput,foutput = 
 #> ℹ No. of samples marked to be filtered out for IDB after missingness and heterozygosity filter: 2
 #> ℹ No. of samples in input plink files: 276
 #> ℹ No. of samples in output plink files: 274
-#> ✔ Output plink files, PreimputeEX_QC4 with final samples are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpJ9ecms.
+#> ✔ Output plink files, PreimputeEX_QC4 with final samples are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpaS06fx.
 ```
 Copying the plink files from ResultDir to DataDir.
 
@@ -495,7 +499,7 @@ x <- AncestryCheck(DataDir = DataDir,
 #> ✔ PCA done.
 ```
 
-![plot of chunk unnamed-chunk-16](figure/unnamed-chunk-16-1.png)
+![plot of chunk unnamed-chunk-16](./unnamed-chunk-16-1.png)
 
 ```
 #> ℹ No allele flips between study and reference data.
@@ -565,7 +569,7 @@ x <- QCsnp(DataDir = ResultDir, ResultDir = ResultDir, finput = finput,foutput =
 #> • In cases,  0 variants removed due to Hardy-Weinberg exact test.
 #> • In controls,  0 variants removed due to Hardy-Weinberg exact test.
 #> ✔ Merging is done using the common SNPs between the input genotype files.
-#> ✔ Plink files with merged regions are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpJ9ecms prefixed as filtered_temp2
+#> ✔ Plink files with merged regions are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpaS06fx prefixed as filtered_temp2
 #> ℹ There are no monomorphic SNPs.
 #> ℹ No SNP with differential missingness between cases and controls.
 #> ✔ Output plink files prefixed as ,Preimpute_Final, with passed SNPs are saved in ResultDir.
@@ -654,184 +658,171 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  collate  en_US.UTF-8
 #>  ctype    en_US.UTF-8
 #>  tz       America/New_York
-#>  date     2025-08-01
+#>  date     2025-08-04
 #>  pandoc   3.6.3 @ /Applications/Positron.app/Contents/Resources/app/quarto/bin/tools/aarch64/ (via rmarkdown)
 #>  quarto   1.7.32 @ /usr/local/bin/quarto
 #> 
 #> ─ Packages ───────────────────────────────────────────────────────────────────────────────────────────────────────────
-#>  ! package              * version   date (UTC) lib source
-#>    abind                  1.4-8     2024-09-12 [1] CRAN (R 4.5.0)
-#>    askpass                1.2.1     2024-10-04 [1] CRAN (R 4.5.0)
-#>    backports              1.5.0     2024-05-23 [1] CRAN (R 4.5.1)
-#>    bibtex                 0.5.1     2023-01-26 [1] CRAN (R 4.5.0)
-#>    bigassertr             0.1.7     2025-06-27 [1] CRAN (R 4.5.1)
-#>    bigparallelr           0.3.2     2021-10-02 [1] CRAN (R 4.5.0)
-#>    bigsnpr                1.12.18   2024-11-26 [1] CRAN (R 4.5.1)
-#>    bigsparser             0.7.3     2024-09-06 [1] CRAN (R 4.5.1)
-#>    bigstatsr              1.6.2     2025-07-29 [1] CRAN (R 4.5.1)
-#>    Biobase                2.68.0    2025-04-15 [1] Bioconduc~
-#>    BiocGenerics           0.54.0    2025-04-15 [1] Bioconduc~
-#>    BiocIO                 1.18.0    2025-04-15 [1] Bioconduc~
-#>    BiocManager            1.30.26   2025-06-05 [1] CRAN (R 4.5.0)
-#>    BiocParallel           1.42.1    2025-06-01 [1] Bioconductor 3.21 (R 4.5.0)
-#>    BiocStyle              2.36.0    2025-04-15 [1] Bioconduc~
-#>    Biostrings             2.76.0    2025-04-15 [1] Bioconduc~
-#>    bit                    4.6.0     2025-03-06 [1] CRAN (R 4.5.1)
-#>    bit64                  4.6.0-1   2025-01-16 [1] CRAN (R 4.5.1)
-#>    bitops                 1.0-9     2024-10-03 [1] CRAN (R 4.5.0)
-#>    brio                   1.1.5     2024-04-24 [1] CRAN (R 4.5.1)
-#>    broom                  1.0.9     2025-07-28 [1] CRAN (R 4.5.1)
-#>    BSgenome               1.76.0    2025-04-15 [1] Bioconduc~
-#>    cachem                 1.1.0     2024-05-16 [1] CRAN (R 4.5.0)
-#>    calibrate              1.7.7     2020-06-19 [1] CRAN (R 4.5.0)
-#>    callr                  3.7.6     2024-03-25 [1] CRAN (R 4.5.0)
-#>    car                    3.1-3     2024-09-27 [1] CRAN (R 4.5.0)
-#>    carData                3.0-5     2022-01-06 [1] CRAN (R 4.5.0)
-#>    cli                    3.6.5     2025-04-23 [1] CRAN (R 4.5.0)
-#>    codetools              0.2-20    2024-03-31 [3] CRAN (R 4.5.1)
-#>    commonmark             2.0.0     2025-07-07 [1] CRAN (R 4.5.1)
-#>    cowplot                1.2.0     2025-07-07 [1] CRAN (R 4.5.1)
-#>    crayon                 1.5.3     2024-06-20 [1] CRAN (R 4.5.0)
-#>    credentials            2.0.2     2024-10-04 [1] CRAN (R 4.5.0)
-#>    curl                   6.4.0     2025-06-22 [1] CRAN (R 4.5.1)
-#>    data.table             1.17.8    2025-07-10 [1] CRAN (R 4.5.1)
-#>    DelayedArray           0.34.1    2025-04-17 [1] Bioconduc~
-#>    desc                   1.4.3     2023-12-10 [1] CRAN (R 4.5.0)
-#>    devtools             * 2.4.5     2022-10-11 [2] CRAN (R 4.5.0)
-#>    digest                 0.6.37    2024-08-19 [1] CRAN (R 4.5.0)
-#>    doParallel             1.0.17    2022-02-07 [1] CRAN (R 4.5.0)
-#>    doRNG                  1.8.6.2   2025-04-02 [1] CRAN (R 4.5.0)
-#>    dplyr                  1.1.4     2023-11-17 [1] CRAN (R 4.5.0)
-#>    ellipsis               0.3.2     2021-04-29 [2] CRAN (R 4.5.0)
-#>    evaluate               1.0.4     2025-06-18 [1] CRAN (R 4.5.1)
-#>    farver                 2.1.2     2024-05-13 [1] CRAN (R 4.5.0)
-#>    fastmap                1.2.0     2024-05-15 [1] CRAN (R 4.5.0)
-#>    flock                  0.7       2016-11-12 [1] CRAN (R 4.5.1)
-#>    foreach                1.5.2     2022-02-02 [1] CRAN (R 4.5.0)
-#>    Formula                1.2-5     2023-02-24 [1] CRAN (R 4.5.0)
-#>    fs                     1.6.6     2025-04-12 [1] CRAN (R 4.5.0)
-#>    gdsfmt                 1.44.1    2025-07-09 [1] Bioconduc~
-#>    generics               0.1.4     2025-05-09 [1] CRAN (R 4.5.0)
-#>    GenomeInfoDb           1.44.1    2025-07-23 [1] Bioconduc~
-#>    GenomeInfoDbData       1.2.14    2025-04-21 [1] Bioconductor
-#>    GenomicAlignments      1.44.0    2025-04-15 [1] Bioconduc~
-#>    GenomicRanges          1.60.0    2025-04-15 [1] Bioconduc~
-#>    gert                   2.1.5     2025-03-25 [1] CRAN (R 4.5.1)
-#>    ggplot2                3.5.2     2025-04-09 [1] CRAN (R 4.5.0)
-#>    ggpubr                 0.6.1     2025-06-27 [1] CRAN (R 4.5.1)
-#>    ggrepel                0.9.6     2024-09-07 [1] CRAN (R 4.5.1)
-#>    ggsignif               0.6.4     2022-10-13 [1] CRAN (R 4.5.0)
-#>    gh                     1.5.0     2025-05-26 [1] CRAN (R 4.5.0)
-#>    gitcreds               0.1.2     2022-09-08 [1] CRAN (R 4.5.0)
-#>    glue                   1.8.0     2024-09-30 [1] CRAN (R 4.5.0)
-#>    gridExtra              2.3       2017-09-09 [1] CRAN (R 4.5.0)
-#>    gtable                 0.3.6     2024-10-25 [1] CRAN (R 4.5.0)
-#>  P GXwasR               * 0.99.0    2025-08-01 [?] Bioconductor
-#>    hms                    1.1.3     2023-03-21 [1] CRAN (R 4.5.0)
-#>    htmltools              0.5.8.1   2024-04-04 [1] CRAN (R 4.5.0)
-#>    htmlwidgets            1.6.4     2023-12-06 [1] CRAN (R 4.5.0)
-#>    httpuv                 1.6.16    2025-04-16 [1] CRAN (R 4.5.1)
-#>    httr                   1.4.7     2023-08-15 [1] CRAN (R 4.5.0)
-#>    httr2                  1.2.1     2025-07-22 [1] CRAN (R 4.5.1)
-#>    hunspell               3.0.6     2025-03-22 [1] CRAN (R 4.5.1)
-#>    IRanges                2.42.0    2025-04-15 [1] Bioconduc~
-#>    iterators              1.0.14    2022-02-05 [1] CRAN (R 4.5.0)
-#>    jsonlite               2.0.0     2025-03-27 [1] CRAN (R 4.5.0)
-#>    knitr                  1.50      2025-03-16 [1] CRAN (R 4.5.0)
-#>    labeling               0.4.3     2023-08-29 [1] CRAN (R 4.5.0)
-#>    later                  1.4.2     2025-04-08 [1] CRAN (R 4.5.1)
-#>    lattice                0.22-7    2025-04-02 [3] CRAN (R 4.5.1)
-#>    lifecycle              1.0.4     2023-11-07 [1] CRAN (R 4.5.0)
-#>    lubridate              1.9.4     2024-12-08 [1] CRAN (R 4.5.1)
-#>    magrittr               2.0.3     2022-03-30 [1] CRAN (R 4.5.0)
-#>    MASS                   7.3-65    2025-02-28 [3] CRAN (R 4.5.1)
-#>    mathjaxr               1.8-0     2025-04-30 [1] CRAN (R 4.5.1)
-#>    Matrix                 1.7-3     2025-03-11 [3] CRAN (R 4.5.1)
-#>    MatrixGenerics         1.20.0    2025-04-15 [1] Bioconduc~
-#>    matrixStats            1.5.0     2025-01-07 [1] CRAN (R 4.5.0)
-#>    memoise                2.0.1     2021-11-26 [1] CRAN (R 4.5.0)
-#>    mime                   0.13      2025-03-17 [1] CRAN (R 4.5.0)
-#>    miniUI                 0.1.2     2025-04-17 [2] CRAN (R 4.5.0)
-#>    openssl                2.3.3     2025-05-26 [1] CRAN (R 4.5.0)
-#>    pillar                 1.11.0    2025-07-04 [1] CRAN (R 4.5.1)
-#>    pkgbuild               1.4.8     2025-05-26 [1] CRAN (R 4.5.0)
-#>    pkgconfig              2.0.3     2019-09-22 [1] CRAN (R 4.5.0)
-#>    pkgdown                2.1.3     2025-05-25 [2] CRAN (R 4.5.0)
-#>    pkgload                1.4.0     2024-06-28 [1] CRAN (R 4.5.0)
-#>    plyr                   1.8.9     2023-10-02 [1] CRAN (R 4.5.1)
-#>    plyranges              1.28.0    2025-04-15 [1] Bioconduc~
-#>    poolr                  1.2-0     2025-05-07 [1] CRAN (R 4.5.0)
-#>    prettyunits            1.2.0     2023-09-24 [1] CRAN (R 4.5.0)
-#>    printr               * 0.3       2023-03-08 [1] CRAN (R 4.5.0)
-#>    processx               3.8.6     2025-02-21 [1] CRAN (R 4.5.1)
-#>    profvis                0.4.0     2024-09-20 [2] CRAN (R 4.5.0)
-#>    progress               1.2.3     2023-12-06 [1] CRAN (R 4.5.0)
-#>    promises               1.3.3     2025-05-29 [1] CRAN (R 4.5.0)
-#>    ps                     1.9.1     2025-04-12 [1] CRAN (R 4.5.1)
-#>    purrr                  1.1.0     2025-07-10 [1] CRAN (R 4.5.1)
-#>    qqman                  0.1.9     2023-08-23 [1] CRAN (R 4.5.0)
-#>    R6                     2.6.1     2025-02-15 [1] CRAN (R 4.5.0)
-#>    rappdirs               0.3.3     2021-01-31 [1] CRAN (R 4.5.0)
-#>    rbibutils              2.3       2024-10-04 [1] CRAN (R 4.5.1)
-#>    rcmdcheck              1.4.0     2021-09-27 [2] CRAN (R 4.5.0)
-#>    RColorBrewer           1.1-3     2022-04-03 [1] CRAN (R 4.5.0)
-#>    Rcpp                   1.1.0     2025-07-02 [1] CRAN (R 4.5.1)
-#>    RCurl                  1.98-1.17 2025-03-22 [1] CRAN (R 4.5.0)
-#>    Rdpack                 2.6.4     2025-04-09 [1] CRAN (R 4.5.0)
-#>    RefManageR           * 1.4.0     2022-09-30 [1] CRAN (R 4.5.1)
-#>    regioneR               1.40.1    2025-06-01 [1] Bioconductor 3.21 (R 4.5.0)
-#>    remotes                2.5.0     2024-03-17 [1] CRAN (R 4.5.0)
-#>    restfulr               0.0.16    2025-06-27 [1] CRAN (R 4.5.1)
-#>    rjson                  0.2.23    2024-09-16 [1] CRAN (R 4.5.0)
-#>    rlang                  1.1.6     2025-04-11 [1] CRAN (R 4.5.0)
-#>    rmarkdown            * 2.29      2024-11-04 [1] CRAN (R 4.5.0)
-#>    rmio                   0.4.0     2022-02-17 [1] CRAN (R 4.5.0)
-#>    rngtools               1.5.2     2021-09-20 [1] CRAN (R 4.5.0)
-#>    roxygen2               7.3.2     2024-06-28 [1] CRAN (R 4.5.0)
-#>    rprojroot              2.1.0     2025-07-12 [1] CRAN (R 4.5.1)
-#>    Rsamtools              2.24.0    2025-04-15 [1] Bioconduc~
-#>    rstatix                0.7.2     2023-02-01 [1] CRAN (R 4.5.0)
-#>    rstudioapi             0.17.1    2024-10-22 [1] CRAN (R 4.5.0)
-#>    rtracklayer            1.68.0    2025-04-15 [1] Bioconduc~
-#>    S4Arrays               1.8.1     2025-06-01 [1] Bioconductor 3.21 (R 4.5.0)
-#>    S4Vectors              0.46.0    2025-04-15 [1] Bioconduc~
-#>    scales                 1.4.0     2025-04-24 [1] CRAN (R 4.5.0)
-#>    sessioninfo          * 1.2.3     2025-02-05 [1] CRAN (R 4.5.1)
-#>    shiny                  1.11.0    2025-06-24 [1] CRAN (R 4.5.1)
-#>    SNPRelate              1.42.0    2025-04-15 [1] Bioconduc~
-#>    SparseArray            1.8.1     2025-07-23 [1] Bioconduc~
-#>    spelling               2.3.1     2024-10-04 [1] CRAN (R 4.5.0)
-#>    stringi                1.8.7     2025-03-27 [1] CRAN (R 4.5.0)
-#>    stringr                1.5.1     2023-11-14 [1] CRAN (R 4.5.0)
-#>    sumFREGAT              1.2.5     2022-06-07 [1] CRAN (R 4.5.1)
-#>    SummarizedExperiment   1.38.1    2025-04-30 [1] Bioconductor 3.21 (R 4.5.0)
-#>    sys                    3.4.3     2024-10-04 [1] CRAN (R 4.5.0)
-#>    testthat             * 3.2.3     2025-01-13 [1] CRAN (R 4.5.1)
-#>    tibble                 3.3.0     2025-06-08 [1] CRAN (R 4.5.0)
-#>    tidyr                  1.3.1     2024-01-24 [1] CRAN (R 4.5.1)
-#>    tidyselect             1.2.1     2024-03-11 [1] CRAN (R 4.5.0)
-#>    timechange             0.3.0     2024-01-18 [1] CRAN (R 4.5.1)
-#>    tzdb                   0.5.0     2025-03-15 [1] CRAN (R 4.5.1)
-#>    UCSC.utils             1.4.0     2025-04-15 [1] Bioconduc~
-#>    urlchecker             1.0.1     2021-11-30 [2] CRAN (R 4.5.0)
-#>    usethis              * 3.1.0     2024-11-26 [1] CRAN (R 4.5.0)
-#>    vctrs                  0.6.5     2023-12-01 [1] CRAN (R 4.5.0)
-#>    vroom                  1.6.5     2023-12-05 [1] CRAN (R 4.5.1)
-#>    withr                  3.0.2     2024-10-28 [1] CRAN (R 4.5.0)
-#>    xfun                   0.52      2025-04-02 [1] CRAN (R 4.5.0)
-#>    XML                    3.99-0.18 2025-01-01 [1] CRAN (R 4.5.0)
-#>    xml2                   1.3.8     2025-03-14 [1] CRAN (R 4.5.1)
-#>    xopen                  1.0.1     2024-04-25 [2] CRAN (R 4.5.0)
-#>    xtable                 1.8-4     2019-04-21 [1] CRAN (R 4.5.0)
-#>    XVector                0.48.0    2025-04-15 [1] Bioconduc~
-#>    yaml                   2.3.10    2024-07-26 [1] CRAN (R 4.5.0)
+#>  package              * version    date (UTC) lib source
+#>  abind                  1.4-8      2024-09-12 [2] CRAN (R 4.5.0)
+#>  backports              1.5.0      2024-05-23 [2] CRAN (R 4.5.1)
+#>  bibtex                 0.5.1      2023-01-26 [2] CRAN (R 4.5.0)
+#>  bigassertr             0.1.7      2025-06-27 [2] CRAN (R 4.5.1)
+#>  bigparallelr           0.3.2      2021-10-02 [2] CRAN (R 4.5.0)
+#>  bigsnpr                1.12.18    2024-11-26 [2] CRAN (R 4.5.1)
+#>  bigsparser             0.7.3      2024-09-06 [2] CRAN (R 4.5.1)
+#>  bigstatsr              1.6.2      2025-07-29 [2] CRAN (R 4.5.1)
+#>  Biobase                2.68.0     2025-04-15 [2] Bioconduc~
+#>  BiocGenerics           0.54.0     2025-04-15 [2] Bioconduc~
+#>  BiocIO                 1.18.0     2025-04-15 [2] Bioconduc~
+#>  BiocManager            1.30.26    2025-06-05 [2] CRAN (R 4.5.0)
+#>  BiocParallel           1.42.1     2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
+#>  BiocStyle              2.36.0     2025-04-15 [2] Bioconduc~
+#>  Biostrings             2.76.0     2025-04-15 [2] Bioconduc~
+#>  bit                    4.6.0      2025-03-06 [2] CRAN (R 4.5.1)
+#>  bit64                  4.6.0-1    2025-01-16 [2] CRAN (R 4.5.1)
+#>  bitops                 1.0-9      2024-10-03 [2] CRAN (R 4.5.0)
+#>  brio                   1.1.5      2024-04-24 [2] CRAN (R 4.5.1)
+#>  broom                  1.0.9      2025-07-28 [2] CRAN (R 4.5.1)
+#>  BSgenome               1.76.0     2025-04-15 [2] Bioconduc~
+#>  cachem                 1.1.0      2024-05-16 [2] CRAN (R 4.5.0)
+#>  calibrate              1.7.7      2020-06-19 [2] CRAN (R 4.5.0)
+#>  callr                  3.7.6      2024-03-25 [2] CRAN (R 4.5.0)
+#>  car                    3.1-3      2024-09-27 [2] CRAN (R 4.5.0)
+#>  carData                3.0-5      2022-01-06 [2] CRAN (R 4.5.0)
+#>  cli                    3.6.5      2025-04-23 [2] CRAN (R 4.5.0)
+#>  codetools              0.2-20     2024-03-31 [4] CRAN (R 4.5.1)
+#>  cowplot                1.2.0      2025-07-07 [2] CRAN (R 4.5.1)
+#>  crayon                 1.5.3      2024-06-20 [2] CRAN (R 4.5.0)
+#>  curl                   6.4.0      2025-06-22 [2] CRAN (R 4.5.1)
+#>  data.table             1.17.8     2025-07-10 [2] CRAN (R 4.5.1)
+#>  DelayedArray           0.34.1     2025-04-17 [2] Bioconduc~
+#>  desc                   1.4.3      2023-12-10 [2] CRAN (R 4.5.0)
+#>  devtools             * 2.4.5      2022-10-11 [3] CRAN (R 4.5.0)
+#>  digest                 0.6.37     2024-08-19 [2] CRAN (R 4.5.0)
+#>  doParallel             1.0.17     2022-02-07 [2] CRAN (R 4.5.0)
+#>  doRNG                  1.8.6.2    2025-04-02 [2] CRAN (R 4.5.0)
+#>  dplyr                  1.1.4      2023-11-17 [2] CRAN (R 4.5.0)
+#>  ellipsis               0.3.2      2021-04-29 [3] CRAN (R 4.5.0)
+#>  evaluate               1.0.4      2025-06-18 [2] CRAN (R 4.5.1)
+#>  farver                 2.1.2      2024-05-13 [2] CRAN (R 4.5.0)
+#>  fastmap                1.2.0      2024-05-15 [2] CRAN (R 4.5.0)
+#>  flock                  0.7        2016-11-12 [2] CRAN (R 4.5.1)
+#>  foreach                1.5.2      2022-02-02 [2] CRAN (R 4.5.0)
+#>  Formula                1.2-5      2023-02-24 [2] CRAN (R 4.5.0)
+#>  fs                     1.6.6      2025-04-12 [2] CRAN (R 4.5.0)
+#>  gdsfmt                 1.44.1     2025-07-09 [2] Bioconduc~
+#>  generics               0.1.4      2025-05-09 [2] CRAN (R 4.5.0)
+#>  GenomeInfoDb           1.44.1     2025-07-23 [2] Bioconduc~
+#>  GenomeInfoDbData       1.2.14     2025-04-21 [2] Bioconductor
+#>  GenomicAlignments      1.44.0     2025-04-15 [2] Bioconduc~
+#>  GenomicRanges          1.60.0     2025-04-15 [2] Bioconduc~
+#>  ggplot2                3.5.2      2025-04-09 [2] CRAN (R 4.5.0)
+#>  ggpubr                 0.6.1      2025-06-27 [2] CRAN (R 4.5.1)
+#>  ggrepel                0.9.6      2024-09-07 [2] CRAN (R 4.5.1)
+#>  ggsignif               0.6.4      2022-10-13 [2] CRAN (R 4.5.0)
+#>  glue                   1.8.0      2024-09-30 [2] CRAN (R 4.5.0)
+#>  gridExtra              2.3        2017-09-09 [2] CRAN (R 4.5.0)
+#>  gtable                 0.3.6      2024-10-25 [2] CRAN (R 4.5.0)
+#>  GXwasR               * 0.99.0     2025-08-04 [1] Bioconductor
+#>  hms                    1.1.3      2023-03-21 [2] CRAN (R 4.5.0)
+#>  htmltools              0.5.8.1    2024-04-04 [2] CRAN (R 4.5.0)
+#>  htmlwidgets            1.6.4      2023-12-06 [2] CRAN (R 4.5.0)
+#>  httpuv                 1.6.16     2025-04-16 [2] CRAN (R 4.5.1)
+#>  httr                   1.4.7      2023-08-15 [2] CRAN (R 4.5.0)
+#>  IRanges                2.42.0     2025-04-15 [2] Bioconduc~
+#>  iterators              1.0.14     2022-02-05 [2] CRAN (R 4.5.0)
+#>  jsonlite               2.0.0      2025-03-27 [2] CRAN (R 4.5.0)
+#>  knitr                  1.50       2025-03-16 [2] CRAN (R 4.5.0)
+#>  labeling               0.4.3      2023-08-29 [2] CRAN (R 4.5.0)
+#>  later                  1.4.2      2025-04-08 [2] CRAN (R 4.5.1)
+#>  lattice                0.22-7     2025-04-02 [4] CRAN (R 4.5.1)
+#>  lifecycle              1.0.4      2023-11-07 [2] CRAN (R 4.5.0)
+#>  lubridate              1.9.4      2024-12-08 [2] CRAN (R 4.5.1)
+#>  magrittr               2.0.3      2022-03-30 [2] CRAN (R 4.5.0)
+#>  MASS                   7.3-65     2025-02-28 [4] CRAN (R 4.5.1)
+#>  mathjaxr               1.8-0      2025-04-30 [2] CRAN (R 4.5.1)
+#>  Matrix                 1.7-3      2025-03-11 [4] CRAN (R 4.5.1)
+#>  MatrixGenerics         1.20.0     2025-04-15 [2] Bioconduc~
+#>  matrixStats            1.5.0      2025-01-07 [2] CRAN (R 4.5.0)
+#>  memoise                2.0.1      2021-11-26 [2] CRAN (R 4.5.0)
+#>  mime                   0.13       2025-03-17 [2] CRAN (R 4.5.0)
+#>  miniUI                 0.1.2      2025-04-17 [3] CRAN (R 4.5.0)
+#>  pillar                 1.11.0     2025-07-04 [2] CRAN (R 4.5.1)
+#>  pkgbuild               1.4.8      2025-05-26 [2] CRAN (R 4.5.0)
+#>  pkgconfig              2.0.3      2019-09-22 [2] CRAN (R 4.5.0)
+#>  pkgdev                 0.1.0.9060 2025-08-04 [2] Github (dieghernan/pkgdev@e56f2a8)
+#>  pkgload                1.4.0      2024-06-28 [2] CRAN (R 4.5.0)
+#>  plyr                   1.8.9      2023-10-02 [2] CRAN (R 4.5.1)
+#>  plyranges              1.28.0     2025-04-15 [2] Bioconduc~
+#>  poolr                  1.2-0      2025-05-07 [2] CRAN (R 4.5.0)
+#>  prettyunits            1.2.0      2023-09-24 [2] CRAN (R 4.5.0)
+#>  printr               * 0.3        2023-03-08 [2] CRAN (R 4.5.0)
+#>  processx               3.8.6      2025-02-21 [2] CRAN (R 4.5.1)
+#>  profvis                0.4.0      2024-09-20 [3] CRAN (R 4.5.0)
+#>  progress               1.2.3      2023-12-06 [2] CRAN (R 4.5.0)
+#>  promises               1.3.3      2025-05-29 [2] CRAN (R 4.5.0)
+#>  ps                     1.9.1      2025-04-12 [2] CRAN (R 4.5.1)
+#>  purrr                  1.1.0      2025-07-10 [2] CRAN (R 4.5.1)
+#>  qqman                  0.1.9      2023-08-23 [2] CRAN (R 4.5.0)
+#>  R.methodsS3            1.8.2      2022-06-13 [2] CRAN (R 4.5.0)
+#>  R.oo                   1.27.1     2025-05-02 [2] CRAN (R 4.5.0)
+#>  R.utils                2.13.0     2025-02-24 [2] CRAN (R 4.5.0)
+#>  R6                     2.6.1      2025-02-15 [2] CRAN (R 4.5.0)
+#>  rbibutils              2.3        2024-10-04 [2] CRAN (R 4.5.1)
+#>  RColorBrewer           1.1-3      2022-04-03 [2] CRAN (R 4.5.0)
+#>  Rcpp                   1.1.0      2025-07-02 [2] CRAN (R 4.5.1)
+#>  RCurl                  1.98-1.17  2025-03-22 [2] CRAN (R 4.5.0)
+#>  Rdpack                 2.6.4      2025-04-09 [2] CRAN (R 4.5.0)
+#>  RefManageR           * 1.4.0      2022-09-30 [2] CRAN (R 4.5.1)
+#>  regioneR               1.40.1     2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
+#>  remotes                2.5.0      2024-03-17 [2] CRAN (R 4.5.0)
+#>  restfulr               0.0.16     2025-06-27 [2] CRAN (R 4.5.1)
+#>  rjson                  0.2.23     2024-09-16 [2] CRAN (R 4.5.0)
+#>  rlang                  1.1.6      2025-04-11 [2] CRAN (R 4.5.0)
+#>  rmarkdown            * 2.29       2024-11-04 [2] CRAN (R 4.5.0)
+#>  rmio                   0.4.0      2022-02-17 [2] CRAN (R 4.5.0)
+#>  rngtools               1.5.2      2021-09-20 [2] CRAN (R 4.5.0)
+#>  rprojroot              2.1.0      2025-07-12 [2] CRAN (R 4.5.1)
+#>  Rsamtools              2.24.0     2025-04-15 [2] Bioconduc~
+#>  rstatix                0.7.2      2023-02-01 [2] CRAN (R 4.5.0)
+#>  rtracklayer            1.68.0     2025-04-15 [2] Bioconduc~
+#>  S4Arrays               1.8.1      2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
+#>  S4Vectors              0.46.0     2025-04-15 [2] Bioconduc~
+#>  scales                 1.4.0      2025-04-24 [2] CRAN (R 4.5.0)
+#>  sessioninfo          * 1.2.3      2025-02-05 [2] CRAN (R 4.5.1)
+#>  shiny                  1.11.1     2025-07-03 [2] CRAN (R 4.5.1)
+#>  SNPRelate              1.42.0     2025-04-15 [2] Bioconduc~
+#>  SparseArray            1.8.1      2025-07-23 [2] Bioconduc~
+#>  stringi                1.8.7      2025-03-27 [2] CRAN (R 4.5.0)
+#>  stringr                1.5.1      2023-11-14 [2] CRAN (R 4.5.0)
+#>  sumFREGAT              1.2.5      2022-06-07 [2] CRAN (R 4.5.1)
+#>  SummarizedExperiment   1.38.1     2025-04-30 [2] Bioconductor 3.21 (R 4.5.0)
+#>  sys                    3.4.3      2024-10-04 [2] CRAN (R 4.5.0)
+#>  testthat             * 3.2.3      2025-01-13 [2] CRAN (R 4.5.1)
+#>  tibble                 3.3.0      2025-06-08 [2] CRAN (R 4.5.0)
+#>  tidyr                  1.3.1      2024-01-24 [2] CRAN (R 4.5.1)
+#>  tidyselect             1.2.1      2024-03-11 [2] CRAN (R 4.5.0)
+#>  timechange             0.3.0      2024-01-18 [2] CRAN (R 4.5.1)
+#>  tzdb                   0.5.0      2025-03-15 [2] CRAN (R 4.5.1)
+#>  UCSC.utils             1.4.0      2025-04-15 [2] Bioconduc~
+#>  urlchecker             1.0.1      2021-11-30 [3] CRAN (R 4.5.0)
+#>  usethis              * 3.1.0      2024-11-26 [2] CRAN (R 4.5.0)
+#>  vctrs                  0.6.5      2023-12-01 [2] CRAN (R 4.5.0)
+#>  vroom                  1.6.5      2023-12-05 [2] CRAN (R 4.5.1)
+#>  withr                  3.0.2      2024-10-28 [2] CRAN (R 4.5.0)
+#>  xfun                   0.52       2025-04-02 [2] CRAN (R 4.5.0)
+#>  XML                    3.99-0.18  2025-01-01 [2] CRAN (R 4.5.0)
+#>  xml2                   1.3.8      2025-03-14 [2] CRAN (R 4.5.1)
+#>  xtable                 1.8-4      2019-04-21 [2] CRAN (R 4.5.0)
+#>  XVector                0.48.0     2025-04-15 [2] Bioconduc~
+#>  yaml                   2.3.10     2024-07-26 [2] CRAN (R 4.5.0)
 #> 
-#>  [1] /Users/mayerdav/Library/R/arm64/4.5/library
-#>  [2] /opt/homebrew/lib/R/4.5/site-library
-#>  [3] /opt/homebrew/Cellar/r/4.5.1/lib/R/library
-#> 
+#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpaS06fx/temp_libpatha11a3f7752b0
+#>  [2] /Users/mayerdav/Library/R/arm64/4.5/library
+#>  [3] /opt/homebrew/lib/R/4.5/site-library
+#>  [4] /opt/homebrew/Cellar/r/4.5.1/lib/R/library
 #>  * ── Packages attached to the search path.
-#>  P ── Loaded and on-disk path mismatch.
 #> 
 #> ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ```
